# sel4zircon

./: 0001-libsel4simple-default-Fixes-to-cap-info-funcs.patch  CMakeLists.txt  Kconfig  Makefile  README.md  apply-patches.sh  gen_syscalls.sh  syscalls.list
apps/hello-world/: CMakeLists.txt  Kbuild  Kconfig  Makefile
apps/hello-world/src/: crt0.S  hello.c
apps/zircon-server/: .Kbuild.swp  CMakeLists.txt  Kbuild  Kconfig  Makefile  gen_syscalls.sh  syscalls.list
apps/zircon-server/include/: addrspace.h  debug.h  env.h  handle.h  object.h  process.h  server.h  sys_helpers.h  syscall_defs.h  syscalls.h  vmar.h
apps/zircon-server/include/object/: channel.h  endpoint.h  event.h  fifo.h  handle.h  job.h  linkedlist.h  listable.h  mbuf.h  object.h  process.h  resource.h  socket.h  tasks.h  thread.h  timer.h  vkaobjectnode.h  vm_region.h  vmar.h  vmo.h  waiter.h
apps/zircon-server/include/test/: elf.h
apps/zircon-server/include/utils/: clock.h  elf.h  fault.h  page_alloc.h  rng.h  system.h
apps/zircon-server/include/zxcpp/: bitalloc.h  new.h  pagearray.h  stackalloc.h  vector.h
apps/zircon-server/include/zxsys/: refptr.cxx
apps/zircon-server/src/: addrspace.cxx  handle.c  handle.h  main.c  server.cxx  sys_table.h  test.cxx  test.h  testtypes.c  util.c
apps/zircon-server/src/object/: channel.cxx  endpoint.cxx  event.cxx  fifo.cxx  handle.c  handle.cxx  job.cxx  mbuf.cxx  vmar.cxx  (+9 more)
apps/zircon-test/: CMakeLists.txt  Kbuild  Kconfig  Makefile
apps/zircon-test/src/: bench.c  bench.h  main.c  sys_def.h  sys_helper.h  syscall.h  test.cxx  test.h  types.h  util.c
(+93 files in other folders)
